--- a/lang/nl/help/index.html
+++ b/lang/nl/help/index.html
@@ -13,25 +13,28 @@
 
 <p>Vak instellingen</p>
 <ul>
+  <li><a href="help.php?file=coursenumsections.html">Aantal weken/onderwerpen</a> 
   <li><a href="help.php?file=mods.html">Activiteitenmodules</a>
   <li><a href="help.php?file=coursereports.html">Activiteitsrapporten</a>
-  <li><a href="help.php?file=courseavailability.html">Beschikbaarheid van vak</a> 
+  <li><a href="help.php?file=coursestartdate.html">Begindatum van het vak</a> 
+  <li><a href="help.php?file=courseavailability.html">Beschikbaarheid van vak</a>
+  <li><a href="help.php?file=coursegrades.html">Cijfers</a>
+  <li><a href="help.php?file=groupmode.html">Groepsmodus</a>
+  <li><a href="help.php?file=courseshortname.html">Korte naam</a>
+  <li><a href="help.php?file=courserecent.html">Laat recente activiteiten zien</a>
+  <li><a href="help.php?file=teachers.html">Leraren</a>
+  <li><a href="help.php?file=picture.html">Nieuwe foto</a>
+  <li><a href="help.php?file=summaries.html">Onderwerp/week samenvatting</a> 
+  <li><a href="help.php?file=scales.html">Schalen</a> 
+  <li><a href="help.php?file=guestaccess.html">Toegang voor gasten</a>
+  <li><a href="help.php?file=uploadusers.html">Upload gebruikers</a> 
   <li><a href="help.php?file=coursecategory.html">Vak categorie</a> 
-  <li><a href="help.php?file=courseformats.html">Vak formaten</a> 
+  <li><a href="help.php?file=courseformats.html">Vak formaten</a>
+  <li><a href="help.php?file=enrolmentkey.html">Vaksleutel</a>
+  <li><a href="help.php?file=courseuploadsize.html">Vak uploadgrootte</a> 
+  <li><a href="help.php?file=groepmodeforce.html">Verplicht groepsmodus</a> 
   <li><a href="help.php?file=coursefullname.html">Volledige naam</a> 
   <li><a href="help.php?file=coursenewsitems.html">Weer te geven nieuwsitems</a> 
-  <li><a href="help.php?file=coursenumsections.html">Aantal weken/onderwerpen</a> 
-  <li><a href="help.php?file=courseshortname.html">Korte naam</a> 
-  <li><a href="help.php?file=coursestartdate.html">Begindatum van het vak</a> 
-  <li><a href="help.php?file=courseuploadsize.html">Course upload size</a> 
-  <li><a href="help.php?file=enrolmentkey.html">Vaksleutel</a> 
-  <li><a href="help.php?file=coursegrades.html">Cijfers</a>
-  <li><a href="help.php?file=guestaccess.html">Toegang voor gasten</a> 
-  <li><a href="help.php?file=courserecent.html">Laat recente activiteiten zien</a> 
-  <li><a href="help.php?file=scales.html">Schalen</a>
-  <li><a href="help.php?file=summaries.html">Onderwerp/week samenvatting</a> 
-  <li><a href="help.php?file=teachers.html">leraren</a> 
-  <li><a href="help.php?file=picture.html">Nieuwe foto</a>
 
 </ul>
 
