--- a/lang/nl/help/quiz/index.html
+++ b/lang/nl/help/quiz/index.html
@@ -1,32 +1,34 @@
 <p>Testen</p>
 <ul>
-  <li><a href="help.php?module=quiz&file=review.html">Laat inzien toe nadat de quiz gesloten is</a>
-  <li><a href="help.php?module=quiz&file=attempts.html">Pogingen</a>
+
+  <li><a href="help.php?module=quiz&file=shuffleanswers.html">Antwoorden schudden</a>
+  <li><a href="help.php?module=quiz&file=grademethod.html">Beoordelings methode</a>
+  <li><a href="help.php?module=quiz&file=description.html">Beschrijvingen</a>
   <li><a href="help.php?module=quiz&file=categories.html">Categorieën</a>
   <li><a href="help.php?module=quiz&file=correctanswers.html">Correcte antwoorden</a>
-  <li><a href="help.php?module=quiz&file=createmultiple.html">Multiple Choice testen maken</a>
-  <li><a href="help.php?module=quiz&file=description.html">Beschrijvingen</a>
+  <li><a href="help.php?module=quiz&file=timeopen.html">De test openen en sluiten</a>
   <li><a href="help.php?module=quiz&file=discrimination.html">Discriminatie Index</a>
   <li><a href="help.php?module=quiz&file=repeatattempts.html">Elke poging bouwt voort op de vorige</a>
+  <li><a href="help.php?module=quiz&file=feedback.html">Feedback op de vraag</a>
+  <li><a href="help.php?module=quiz&file=formatcustom.html">Importeren van Aangepaste test bestanden</a>
+  <li><a href="help.php?module=quiz&file=formataiken.html">Importeren van Aiken bestandsopmaak</a>
+  <li><a href="help.php?module=quiz&file=formatblackboard.html">Importeren van Blackboard quiz bestanden</a>
+  <li><a href="help.php?module=quiz&file=formatctm.html">Importeren van CTM-vragen</a>
+  <li><a href="help.php?module=quiz&file=formatmissingword.html">Importeren van Gatentekst bestandsopmaak</a>
+  <li><a href="help.php?module=quiz&file=formatgift.html">Importeren van Gift bestandsopmaak</a>
+  <li><a href="help.php?module=quiz&file=import.html">Importeren van vragen uit een bestand</a>
   <li><a href="help.php?module=quiz&file=multianswer.html">Ingebedde antwoorden (Cloze)</a>
-  <li><a href="help.php?module=quiz&file=grademethod.html">Beoordelings methode</a>
-  <li><a href="help.php?module=quiz&file=import.html">Vragen importeren</a>
-  <li><a href="help.php?module=quiz&file=formatblackboard.html">Blackboard quiz bestanden importeren</a>
-  <li><a href="help.php?module=quiz&file=formatcustom.html">Aangepaste quiz bestanden importeren</a>
-  <li><a href="help.php?module=quiz&file=formatmissingword.html">Gatentekstbestanden importeren</a>
-  <li><a href="help.php?module=quiz&file=formatctm.html">CTM-vragen importeren</a>
   <li><a href="help.php?module=quiz&file=match.html">Koppelvragen</a>
+  <li><a href="help.php?module=quiz&file=shortanswer.html">Kort antwoord vragen</a>
+  <li><a href="help.php?module=quiz&file=review.html">Laat inzien toe nadat de quiz gesloten is</a>
   <li><a href="help.php?module=quiz&file=maxgrade.html">Maximale cijfer</a>
+  <li><a href="help.php?module=quiz&file=createmultiple.html">Multiple Choice testen maken</a>
   <li><a href="help.php?module=quiz&file=multichoice.html">Multiple choice vragen</a>
   <li><a href="help.php?module=quiz&file=numerical.html">Numeriek vragen</a>
-  <li><a href="help.php?module=quiz&file=timeopen.html">De test openen en sluiten</a>
-  <li><a href="help.php?module=quiz&file=feedback.html">Feedback op de vraag</a>
+  <li><a href="help.php?module=quiz&file=attempts.html">Pogingen</a>
   <li><a href="help.php?module=quiz&file=questiontypes.html">Vraag types - een nieuwe vraag maken</a>
-  <li><a href="help.php?module=quiz&file=random.html">Willekeurige vragen</a>
-  <li><a href="help.php?module=quiz&file=randomsamatch.html">Willekeurige Kort antwoord koppelvragen</a>
-  <li><a href="help.php?module=quiz&file=shortanswer.html">Kort antwoord vragen</a>
-  <li><a href="help.php?module=quiz&file=shuffleanswers.html">Antwoorden schudden</a>
   <li><a href="help.php?module=quiz&file=shufflequestions.html">Vragen schudden</a>
+  <li><a href="help.php?module=quiz&file=randomsamatch.html">Willekeurige Kort antwoord koppelvragen</a>
+  <li><a href="help.php?module=quiz&file=random.html">Willekeurige vragen</a>
   <li><a href="help.php?module=quiz&file=truefalse.html">Waar/Onwaar vragen</a>
 </ul>
-
