--- a/lang/nl/help/scheduler/mods.html
+++ b/lang/nl/help/scheduler/mods.html
@@ -1,5 +1,5 @@
-<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/scheduler/icon.gif">&nbsp;<B>Scheduler</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/scheduler/icon.gif">&nbsp;<B>Planner</B></P>
 <UL>
-<P>Deze module helpt bij het maken van 1-op-1 afspraken met al je studenten. Jij geeft de periodes aan waarin je tijd hebt om afspraken te maken en hoe lang een afspraak duurt. De studenten schrijven daarna zichzelf in op de afspraak momenten die nog niet geboekt zijn. De module houdt ook bij welke studenten al gezien zijn en welke nog geen afspraak hebben gehad.
+<P>Deze module helpt bij het maken van 1-op-1 afspraken met al je leerlingen. Jij geeft de periodes aan waarin je tijd hebt om afspraken te maken en je bepaalt hoe lang een afspraak duurt. De leerlingen schrijven daarna zichzelf in op de afspraakmomenten die nog niet geboekt zijn. De module houdt ook bij welke leerlingen al op de afspraak geweest zijn en welke nog geen afspraak hebben gehad.
 </P>
 </UL>
