--- a/mod/forum/post.html
+++ b/mod/forum/post.html
@@ -110,7 +110,7 @@
     <input type="hidden" name=userid     value="<?php p($post->userid) ?>">
     <input type="hidden" name=groupid    value="<?php p($post->groupid) ?>">
     <input type="hidden" name=edit       value="<?php p($post->edit) ?>">
-    <input type="submit" value="<?php print_string("savechanges"); ?>">
+    <input type="submit" value="<?php print_string('posttoforum', 'forum'); ?>">
     </td>
 
 </tr>
