--- a/admin/config.html
+++ b/admin/config.html
@@ -13,7 +13,7 @@
 <tr valign=top>
 	<td align=right><p>langmenu:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0] = get_string("no");
        $options[1] = get_string("yes");
@@ -105,7 +105,7 @@
 <tr valign=top>
 	<td align=right><p>gdversion:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0] = get_string("gdnot");
        $options[1] = get_string("gd1");
@@ -123,7 +123,7 @@
 <tr valign=top>
     <td align=right><p>htmleditor:</td>
     <td>
-    <?php 
+    <?php
        unset($options);
        $options[0] = get_string("allownot");
        $options[1] = get_string("allow");
@@ -137,7 +137,7 @@
 <tr valign=top>
 	<td align=right><p>maxeditingtime:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[3600] = get_string("numminutes", "", 60);
        $options[2700] = get_string("numminutes", "", 45);
@@ -156,7 +156,7 @@
 <tr valign=top>
 	<td align=right><p>longtimenosee:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[1000] = get_string("numdays", "", 1000);
        $options[365]  = get_string("numdays", "", 365);
@@ -180,7 +180,7 @@
 <tr valign=top>
 	<td align=right><p>deleteunconfirmed:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0]    = get_string("never");
        $options[168]  = get_string("numdays", "", 7);
@@ -204,7 +204,7 @@
 <tr valign=top>
 	<td align=right><p>loglifetime:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0]    = get_string("neverdeletelogs");
        $options[1000] = get_string("numdays", "", 1000);
@@ -226,7 +226,7 @@
 <tr valign=top>
 	<td align=right><p>sessiontimeout:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[14400] = get_string("numhours", "", 4);
        $options[10800] = get_string("numhours", "", 3);
@@ -304,7 +304,7 @@
 <tr valign=top>
 	<td align=right><p>debug:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[7]  = get_string("no");
        $options[15] = get_string("yes");
@@ -319,7 +319,7 @@
 <tr valign=top>
 	<td align=right><p>framename:</td>
 	<td>
-    <?php 
+    <?php
        if (empty($config->framename)) {
            $config->framename = "_top";
        }
@@ -333,7 +333,7 @@
 <tr valign=top>
 	<td align=right><p>secureforms:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0]  = get_string("no");
        $options[1]  = get_string("yes");
@@ -348,7 +348,7 @@
 <tr valign=top>
 	<td align=right><p>teacherassignteachers:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0]  = get_string("no");
        $options[1]  = get_string("yes");
@@ -363,7 +363,7 @@
 <tr valign=top>
 	<td align=right><p>allowunenroll:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0]  = get_string("no");
        $options[1]  = get_string("yes");
@@ -378,7 +378,7 @@
 <tr valign=top>
 	<td align=right><p>maxbytes:</td>
 	<td>
-    <?php 
+    <?php
        $options = get_max_upload_sizes();
        choose_from_menu ($options, "maxbytes", $config->maxbytes, "");
     ?>
@@ -390,7 +390,7 @@
 <tr valign=top>
 	<td align=right><p>fullnamedisplay:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options['language']  = get_string('language');
        $options['firstname lastname']  = get_string('firstname') . ' + ' . get_string('lastname');
@@ -407,7 +407,7 @@
 <tr valign=top>
 	<td align=right><p>extendedusernamechars:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0] = get_string("no");
        $options[1] = get_string("yes");
@@ -422,7 +422,7 @@
 <tr valign=top>
 	<td align=right><p>forcelogin:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0]  = get_string('no');
        $options[1]  = get_string('yes');
@@ -437,7 +437,7 @@
 <tr valign=top>
 	<td align=right><p>forceloginforprofiles:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0]  = get_string('no');
        $options[1]  = get_string('yes');
@@ -452,7 +452,7 @@
 <tr valign=top>
 	<td align=right><p>opentogoogle:</td>
 	<td>
-    <?php 
+    <?php
        unset($options);
        $options[0] = get_string("no");
        $options[1] = get_string("yes");
@@ -477,12 +477,30 @@
     ?>
     </td>
     <td>
-    <?php 
+    <?php
         print_string("configenablerssfeeds");
         //Check for required functions...
         if(!function_exists('utf8_encode')) {
             echo "<font color=\"red\"> You need to add XML support to your PHP installation.</font>";
-        } 
+        }
+    ?>
+    </td>
+</tr>
+
+<tr valign=top>
+        <td align=right><p>digestmailtime:</td>
+        <td>
+    <?php
+    	$hours = array();
+    	for ($i=0; $i<=23; $i++) {
+        	$hours[$i] = sprintf("%02d",$i);
+    	}
+        choose_from_menu($hours, 'digestmailtime', $config->digestmailtime, "");
+    ?>
+    </td>
+    <td>
+    <?php
+        print_string('configdigestmailtime');
     ?>
     </td>
 </tr>
