--- a/mod/quiz/mod.html
+++ b/mod/quiz/mod.html
@@ -94,6 +94,19 @@
      ?>
     </td>
 </tr>
+<!-- BEGIN EDIT -->
+<tr valign=top>
+    <td align=right><p><b><?php print_string("timelimit", "quiz") ?>:</b></p></td>
+    <td>
+    <?php
+        print_timer_selector($form->timelimit);
+        echo "&nbsp;";
+        print_string("minutes","quiz");
+        helpbutton("timelimit", get_string("quiztimer","quiz"), "quiz");
+    ?>
+    </td>
+</tr>
+<!-- END EDIT -->
 <tr valign=top>
     <td align=right><p><b><?php print_string("shufflequestions", "quiz") ?>:</b></p></td>
     <td>
